<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="httpUrl">http://%s:9001/last_design/</string>
    <string name="app_name">快捷校园</string>
    <string name="net_work_error">网络请求出错</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="img_count">%1$d/3</string>
    <string name="get_image">"%sshowImage?name=%s&amp;type=%d"</string>
    <string name="tab1">消息</string>
    <string name="tab2">主页</string>
    <string name="tab3">我的</string>
    <string name="message">消息</string>
    <string name="seat">占位</string>
    <string name="coming_soon">敬请期待</string>
    <string name="exit_en">exit</string>
    <string name="tut_toast_text_time">已发送(%1$ds)</string>
    <string name="phone_regex" tools:ignore="TypographyDashes">^(13[0-9]|14[579]|15[0-3,5-9]|16[6]|17[0135678]|18[0-9]|19[89])\\d{8}$</string>
    <string name="text_after_send_code">重新获取验证码</string>
    <string name="send_verify_code">获取验证码</string>
    <string name="off_day">%d天</string>
    <string name="off_hour">%d小时</string>
    <string name="subject_table">课表</string>
    <string name="cursor">课程</string>
    <string name="table_hello_tip">你好 %s %s,以下是您的课表,点击课程可以获取课程详细信息</string>
    <string name="table_hello_tip_2">以下是 %d 的课表,点击课程可以获取课程详细信息</string>
    <string name="table_hello_tip_3">以下是 %d 的已修课程的成绩</string>
    <string name="table_error_tip_1">课表信息有误</string>
    <string name="lesson">节次</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="learn_tiem">上课时间</string>
    <string name="time">时间</string>
    <string name="first_lesson">第1大节</string>
    <string name="first_lesson_time">08:00&#8211;08:50，08:55&#8211;09:45</string>
    <string name="second_lesson">第2大节</string>
    <string name="second_lesson_time">10:05&#8211;10:55，11:00&#8211;11:50</string>
    <string name="third_lesson">第3大节</string>
    <string name="third_lesson_time">14:00&#8211;14:50，14:55&#8211;15:45</string>
    <string name="fourth_lesson">第4大节</string>
    <string name="fourth_lesson_time">16:05&#8211;16:55，17:00&#8211;17:50</string>
    <string name="fifth_lesson">第5大节</string>
    <string name="fifth_lesson_time">18:45&#8211;20:15</string>
    <string name="sixth_lesson">第6大节</string>
    <string name="sixth_lesson_time">20:30&#8211;22:00</string>
    <string name="pre_week">上一周</string>
    <string name="next_week">下一周</string>
    <string name="current_show_week">当前显示:第%d周</string>
    <string name="alread_first_week">已经是第一周</string>
    <string name="already_last_week">已经是最后一周</string>
    <string name="current_week">本周为第%d周</string>
    <string name="type_tip_sub">课表</string>
    <string name="type_tip_score">成绩</string>
    <string name="week_type">%d-%d</string>
    <string name="cursor_name_2">课程名</string>
    <string name="no_cursor_score">暂无课程成绩</string>
    <string name="leave_off">请假</string>
    <string name="help_tip">请点击要请假的课程,只能选择本周与下周的课程,最多可选择6节课</string>
    <string name="reason_des">请假类型</string>
    <string name="select_subject_count">已选择%d节课</string>
    <string name="confirm">确定</string>
    <string name="cursor_name">%s(%s)</string>
    <string name="teacher_name">老师：%s</string>
    <string name="location">教室：%s</string>
    <string name="week_number">周数：第%d周</string>
    <string name="week_number_2">周数：%s周</string>
    <string name="pitch_number">节数：%s 第%d大节</string>
    <string name="unknow">未知</string>
    <string name="credit_tip">学分：%d</string>
    <string name="cursor_hour_tip">学时：%d</string>
    <string name="off_suject">%d课时</string>
    <string name="type_reason">请假原因</string>
    <string name="select_fail_tip_1">不能选择今天之前的课程</string>
    <string name="select_fail_tip_2">最多只能选择6节课</string>
    <string name="select_fail_tip_3">只能选择本周和下一周的课程</string>
    <string name="select_fail_tip_4">不能选择已经上完的节次</string>
    <string name="select_subject">请假课程</string>
    <string name="selected_subject_info">第%d周 周%d 第%d大节</string>
    <string name="subject_count_tip">%d.</string>
    <string name="no_subject_select">请选择要请假的课程</string>
    <string name="no_reason_des">请假的具体原因不能为空</string>
    <string name="no_reason_des_2">请按要求填写请假的具体原因</string>
    <string name="confirm_info_tip">本次申请%d分钟后才能再次提交申请,您确定要提交该请假申请吗</string>
    <string name="name_tip">姓名:%s</string>
    <string name="type_tip">请假类型:%s</string>
    <string name="leave_title">请假原因:%s</string>
    <string name="start_time_tip">开始时间:%s</string>
    <string name="end_time_tip">结束时间:%s</string>
    <string name="sum_time_tip">时长:%s</string>
    <string name="selected_subject_tip">请假课程:%s</string>
    <string name="content_tip">具体原因:%s</string>
    <string name="img_tip">相关截图或照片</string>
    <string name="reason_detail_txt">具体原因</string>
    <string name="reson_detail_tip">请填写具体原因</string>
    <string name="reson_detail_tip_2">请输入实习地点和实习公司名称中间用"+"号隔开，例：实习地点+实习公司</string>
    <string name="word_count">%d/150</string>
    <string name="name">姓名</string>
    <string name="type">请假类型</string>
    <string name="time_fail_tip">结束时间不能小于当前时间</string>
    <string name="time_fail_tip_2">结束时间不能小于请假开始时间</string>
    <string name="time_fail_tip_3">短假最多只能请7天假</string>
    <string name="time_fail_tip_4">长假的天数要多于7天</string>
    <string name="time_fail_tip_5">%d分钟后才能再次请假</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="time_long">时长</string>
    <string name="type_search">种类</string>
    <string name="submit_persion">审批人</string>
    <string name="select_subject_table">课程选择</string>
    <string name="submit_success">提交成功</string>
    <string name="date_type">yyyy年MM月dd日 HH时</string>
    <string name="date_type_2">yyyy-MM-dd HH:mm</string>
    <string name="date_type_3">MMDDHHmmss</string>
    <string name="date_type_4">yyyy年MM月dd日</string>
    <string name="date_type_5">yyyy.MM.dd</string>
    <string name="date_type_6">MM月dd日</string>
    <string name="date_type_7">yyyyMMdd-HH:mm:ss</string>
    <string name="date_type_8">yyyy-MM-dd HH:mm:ss</string>
    <string name="status_tip_1">正在审批</string>
    <string name="status_tip_2">已批准</string>
    <string name="status_tip_3">已拒绝</string>
    <string name="status_tip_4">未销假</string>
    <string name="status_tip_5">已销假</string>
    <string name="status_tip_6">未请假</string>
    <string name="status_tip_7">获取失败</string>
    <string name="status_tip_8">已修改</string>
    <string name="status_tip_9">已删除</string>
    <string name="group_des">社团</string>
    <string name="ed_search_tip">请输入种类或社团名称</string>
    <string name="current_status">当前状态</string>
    <string name="report_back">销假</string>
    <string name="approval_processing">审批处理</string>
    <string name="check_progress">进度查询</string>
    <string name="approval_history">历史审批记录</string>
    <string name="my_leave_off_list">我的请假记录</string>
    <string name="leave_history">请假记录</string>
    <string name="no_msg_tip">暂无消息</string>
    <string name="no_net_tip">暂无网络</string>
    <string name="no_aut_tip">暂无权限</string>
    <string name="no_dyn_tip">暂无动态</string>
    <string name="leave_detail">请假详情</string>
    <string name="leave_progress">进度查询</string>
    <string name="no_history_tip">暂无记录</string>
    <string name="userId_tip">学号/工号:%d</string>
    <string name="check_approval_record">查看审批记录</string>
    <string name="check_approval_record_2">查看其他人的审批意见</string>
    <string name="create_absence">生成请假条</string>
    <string name="approval_record">历史审批记录</string>
    <string name="submit_time">提交时间:%s</string>
    <string name="approver_text">审批人:%s</string>
    <string name="approval_content_text">审批内容:%s</string>
    <string name="approval_result_text">审批结果:%s</string>
    <string name="approval_time_text">审批时间:%s</string>
    <string name="no_net_tip_2">请先连接网络</string>
    <string name="no_current_leave_info">暂无请假信息</string>
    <string name="approval_leave_info">审批请假信息</string>
    <string name="approval_leave_info_2">审批记录详情</string>
    <string name="approval_addvise">审批意见</string>
    <string name="refuse_tip">拒绝</string>
    <string name="agree_tip">同意</string>
    <string name="approval_addvise_tip">请填写审批意见</string>
    <string name="approval_addvise_tip_2">请输入审批意见</string>
    <string name="approval_addvise_tip_3">审批内容如下,确认要提交该审批结果吗?</string>
    <string name="approval_addvise_tip_4">您没有权限审批该申请</string>
    <string name="approval_addvise_tip_5">审批时间有误</string>
    <string name="approval_addvise_tip_6">该记录已被审批</string>
    <string name="approval_result_des">审批结果:</string>
    <string name="shixi">实习</string>
    <string name="user_info_show_tip">点击查看他的个人信息</string>
    <string name="subject_show_tip">点击查看他的课表及课程成绩</string>
    <string name="use_Info_show_tip">点击查看他的个人信息</string>
    <string name="leaver_name">请假人姓名:%s</string>
    <string name="green_agree"><![CDATA[<font color=\'#7cb342\'>同意</font>]]></string>
    <string name="red_refuse"><![CDATA[<font color=\'#ff4444\'>不同意</font>]]></string>
    <string name="click_close">点击关闭(%ds)</string>
    <string name="login">登陆</string>
    <string name="exit_2s">再按一次退出</string>
    <string name="forget_password">忘记密码?</string>
    <string name="send_code_err">请先获取验证码</string>
    <string name="login_text_code">短信验证码登录</string>
    <string name="copyright">哈尔滨工业大学(威海) 版权所有</string>
    <string name="user_protocol_agree">登录即代表同意我们提供的《用户协议》</string>
    <string name="msg_pls_input_userId">输入学号或工号</string>
    <string name="msg_pls_input_psw">输入密码</string>
    <string name="login_text_pwd">账号密码登录</string>
    <string name="msg_pls_input_code">输入验证码</string>
    <string name="msg_err_phone">请输入正确的手机号</string>
    <string name="msg_err_phone_2">手机号发生改变,请重新获取验证码</string>
    <string name="msg_pls_input_phone">请输入手机号</string>
    <string name="psw_input_hint_origin">输入原密码</string>
    <string name="psw_input_hint_new_confirm">再次输入新密码</string>
    <string name="psw_input_hint">输入6～16位密码</string>
    <string name="psw_input_hint_confirm">再次输入密码</string>
    <string name="msg_pls_input_required">请填写所有必填项</string>
    <string name="no_one_tip">您的帐号已在其他设备登录，如非本人操作，请及时修改密码</string>
    <string name="no_use_tip">您的账号已被冻结,请联系管理员解冻</string>
    <string name="ui_photo">拍照</string>
    <string name="ui_galary">从相册选择</string>
    <string name="ui_check_head">查看当前头像</string>
    <string name="get_head_fail">获取头像失败</string>
    <string name="update_head_fail">头像上传失败</string>
    <string name="msg_success_upload_image">头像上传成功</string>
    <string name="scool_name">哈尔滨工业大学(威海)</string>
    <string name="teacher_cursor_table">%s\n(%s)\n(%s)周</string>
    <string name="currentWeek">本周</string>
    <string name="class_des">班级：</string>
    <string name="email_model">您的验证码是%s，在5分钟内有效。如非本人操作请忽略本短信。</string>
    <string name="send_email_fail">短信发送失败请重试</string>
    <string name="send_email_fail_1">用户欠费</string>
    <string name="send_email_fail_4">端口绑定失败</string>
    <string name="send_email_fail_2">手机号不合法</string>
    <string name="send_email_fail_3">手机号码超过最大支持数</string>
    <string name="send_email_fail_5">平台数据库内部错误</string>
    <string name="send_email_fail_6">内部错误,请联系我们</string>
    <string name="change_pwd">修改密码</string>
    <string name="msg_err_psw">密码错误</string>
    <string name="msg_err_psw_origin">原密码错误</string>
    <string name="pwd_tip">提示:初始密码为身份证后六位,如:12345x</string>
    <string name="msg_err_input_psw">密码输入不一致，请重新输入</string>
    <string name="psw_input_hint_new">输入6~16位新密码</string>
    <string name="change_pwd_success">修改密码成功</string>
    <string name="bind_phone_tip">请先去绑定手机</string>
    <string name="unbind_phone">手机解绑</string>
    <string name="bind_phone">手机绑定</string>
    <string name="create_sign">生成签名</string>
    <string name="sign_edit_des">请输入您的姓名(10字以内)</string>
    <string name="create_sign_des">修改签名</string>
</resources>