<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_marginTop="2px"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/userId_tip"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/blue"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/name_text"
        android:layout_below="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name_tip"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/type_text"
        android:layout_below="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:text="@string/type_tip"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/title_text"
        android:layout_below="@+id/type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/leave_title"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/submit_time_text"
        android:layout_below="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:layout_marginStart="16dp"
        android:text="@string/date_type_2"
         />
</RelativeLayout>