<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/layout_scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/clearColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.definesys.dmportal.appstore.customViews.RCLinearLayout
        android:orientation="vertical"
        app:round_corner="12dp"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
       >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/confirm_info_tip"
                android:textSize="16sp"

                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/name_tip"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/type_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/type_tip"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/leave_title"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/sum_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/sum_time_tip"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/start_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="16dp"
                android:text="@string/start_time_tip"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/end_time_text"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="16dp"
                android:text="@string/end_time_tip"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/selected_subject_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/selected_subject_tip"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/content_tip"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_marginBottom="6dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/img_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/img_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/img_tip"
                    android:textColor="@color/black"
                    android:layout_marginBottom="6dp"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/img_1"
                    android:src="@color/white"
                    android:layout_marginEnd="8dp"
                    android:layout_below="@+id/img_text"
                    android:layout_toStartOf="@+id/img_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />
                <ImageView
                    android:id="@+id/img_2"
                    android:layout_marginEnd="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/img_text"
                    android:layout_width="60dp"
                    android:src="@color/white"
                    android:layout_height="60dp" />
                <ImageView
                    android:id="@+id/img_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/img_text"
                    android:layout_toEndOf="@+id/img_2"
                    android:src="@color/white" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/confirm_text"
                android:text="@string/confirm"
                android:padding="8dp"
                android:textColor="@color/blue"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/cancel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/confirm_text"
                android:layout_marginEnd="20dp"
                android:padding="8dp"
                android:text="@string/cancel"
                android:textColor="@color/blue" />
        </RelativeLayout>
    </com.definesys.dmportal.appstore.customViews.RCLinearLayout>
</ScrollView>