<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/layout_scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/clearColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.definesys.dmportal.appstore.customViews.RCLinearLayout
        android:orientation="vertical"
        app:round_corner="12dp"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/approval_addvise_tip_3"
                android:textSize="16sp"
                android:id="@+id/des_text"
                android:layout_margin="20dp"
                android:textColor="@color/buttonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/approval_result_text"
                android:layout_below="@+id/des_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="16dp"
                android:text="@string/approval_result_des"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/approval_result_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/approval_result_text"
                android:layout_below="@+id/des_text"
                android:text="@string/approval_result_text"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/approval_content_text"
                android:layout_below="@+id/approval_result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/approval_addvise"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/confirm_text"
                android:text="@string/confirm"
                android:padding="8dp"
                android:textColor="@color/blue"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/cancel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/confirm_text"
                android:layout_marginEnd="20dp"
                android:padding="8dp"
                android:text="@string/cancel"
                android:textColor="@color/blue" />
        </RelativeLayout>
    </com.definesys.dmportal.appstore.customViews.RCLinearLayout>
</ScrollView>