<?xml version="1.0" encoding="utf-8"?>
<com.definesys.dmportal.appstore.customViews.RCLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:round_corner="12dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
     <TextView
         android:text="@string/create_sign_des"
         android:id="@+id/des_text"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:paddingTop="8dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_text"
        android:maxLength="10"
        android:theme="@style/MyEditText"
        android:textColor="@color/black"
        android:singleLine="true"
        android:layout_marginStart="8dp"
        android:hint="@string/sign_edit_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/back_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_height="wrap_content">
       <TextView
           android:id="@+id/cancel_text"
           android:text="@string/cancel"
           android:textColor="@color/black"
           android:textSize="18sp"
           android:layout_weight="1"
           android:padding="8dp"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
       <View
           android:background="@color/back_gray"
           android:layout_width="1dp"
           android:layout_height="match_parent">
       </View>
       <TextView
           android:id="@+id/yes_text"
           android:text="@string/create_sign"
           android:textColor="@color/black"
           android:textSize="18sp"
           android:layout_weight="1"
           android:padding="8dp"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
   </LinearLayout>

</com.definesys.dmportal.appstore.customViews.RCLinearLayout>