<?xml version="1.0" encoding="utf-8"?>
<com.definesys.dmportal.appstore.customViews.RCLinearLayout
    android:orientation="vertical"
    app:round_corner="12dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/cusor_name_text"
        android:text="@string/cursor_name"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/credit_icon" />

        <TextView
            android:id="@+id/credit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:text="@string/credit_tip"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/hour_icon" />

        <TextView
            android:id="@+id/cusor_hour_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:text="@string/cursor_hour_tip"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/teacher_icon"
            android:layout_width="22dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_height="22dp" />
        <TextView
            android:id="@+id/teacher_name_text"
            android:textColor="@color/black"
            android:text="@string/teacher_name"
            android:layout_marginStart="2dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/loaction_icon"
            android:layout_width="20dp"
            android:layout_gravity="center"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/location_text"
            android:textColor="@color/black"
            android:text="@string/location"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/week_icon"
            android:layout_width="20dp"
            android:layout_gravity="center"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/week_text"
            android:textColor="@color/black"
            android:text="@string/week_number"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/pitch_icon"
            android:layout_width="20dp"
            android:layout_gravity="center"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/pitch_text"
            android:textColor="@color/black"
            android:text="@string/pitch_number"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/confirm_text"
        android:text="@string/confirm"
        android:padding="8dp"
        android:textColor="@color/blue"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</com.definesys.dmportal.appstore.customViews.RCLinearLayout>